--- a/publican/datadir/Common_Content/common/as-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/as-IN/Conventions.po
@@ -1,13 +1,14 @@
 # translation of Conventions.po to Assamese
 # Amitakhya Phukan <aphukan@fedoraproject.org>, 2007, 2009.
 # Amitakhya Phukan <aphukan@redhat.com>, 2008.
+# ngoswami <ngoswami@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-01 01:51-0500\n"
-"Last-Translator: Amitakhya Phukan <aphukan@fedoraproject.org>\n"
+"PO-Revision-Date: 2012-08-30 05:33-0400\n"
+"Last-Translator: ngoswami <ngoswami@fedoraproject.org>\n"
 "Language-Team: Assamese <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +22,7 @@ msgstr ""
 # Conventions
 #, no-c-format
 msgid "Document Conventions"
-msgstr "আলেখ্যনৰ আচাৰ বিধি"
+msgstr "তথ্যচিত্ৰৰ বিধিসমূহ"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -31,8 +32,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
-"এই হাতপুথিয়ে কিছু শব্দ আৰু খণ্ডবাক্য আৰু তথ্যৰ কিছুমান নিৰ্দ্দিষ্ট অংশক "
-"আলোকপাত কৰিবলৈ বহুতো আচাৰ বিধি ব্যৱহাৰ কৰে ।"
+"এই হাতপুথিয়ে কিছু শব্দ আৰু খণ্ডবাক্য আৰু তথ্যৰ কিছুমান বিশেষ অংশক উজ্জ্বল "
+"কৰিবলৈ বহুতো বিধি ব্যৱহাৰ কৰে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -47,18 +48,18 @@ msgid ""
 "Liberation Fonts set by default."
 msgstr ""
 "PDF আৰু কাগজৰ সংস্কৰণত, এই হাতপুথিয়ে <ulink url=\"https://fedorahosted.org"
-"/liberation-fonts/\">Liberation Fonts</ulink> গোটৰ পৰা আঁকি থোৱা typeface "
-"সমূহ ব্যৱহাৰ কৰে । আপোনাৰ ব্যৱস্থাপ্ৰণালীত সংস্থাপিত হ'লে Liberation Fonts ৰ"
-" গোটক HTML সংস্কৰণত ব্যৱহাৰ কৰা হয় । ন'হ'লে, বৈকল্পিক বা একে ধৰণৰ typeface "
-"সমূহক প্ৰদৰ্শন কৰা হয় । মন কৰিব: Red Hat Enterprise Linux 5 আৰু তাৰ পিছৰ "
-"সংস্কৰণে অবিকল্পিত ভাবে Liberation Fonts ৰ গোট ব্যৱহাৰ কৰে ।"
+"/liberation-fonts/\">Liberation Fonts</ulink> সংহতিৰ পৰা আঁকি থোৱা typeface "
+"সমূহ ব্যৱহাৰ কৰে। আপোনাৰ চিস্টেমত ইনস্টল্ড হলে Liberation Fonts ৰ গোটক HTML "
+"সংস্কৰণত ব্যৱহাৰ কৰা হয়। নহলে, বৈকল্পিক বা একে ধৰণৰ typeface সমূহক প্ৰদৰ্শন "
+"কৰা হয়। মন কৰিব: Red Hat Enterprise Linux 5 আৰু তাৰ পিছৰ সংস্কৰণে অবিকল্পিত "
+"ভাবে Liberation Fonts ৰ গোট ব্যৱহাৰ কৰে।"
 
 #. Tag: title
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr "অক্ষৰমূদ্ৰণশালৰ আচাৰ বিধি"
+msgstr "অক্ষৰমূদ্ৰণশালৰ বিধি"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -69,9 +70,8 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
-"নিৰ্দ্দিষ্ট শব্দ আৰু খণ্ডবাক্যলৈ আকৰ্ষণ কৰিবলৈ চাৰিটা অক্ষৰমূদ্ৰণশালৰ আচাৰ "
-"বিধি ব্যৱহাৰ কৰা হয় । এই আচাৰ বিধি, আৰু সিহঁতক প্ৰয়োগ কৰাৰ পৰিস্থিতি, এনে "
-"ধৰণৰ ।"
+"নিৰ্দিষ্ট শব্দ আৰু খণ্ডবাক্যলৈ আকৰ্ষণ কৰিবলৈ চাৰিটা অক্ষৰমূদ্ৰণশালৰ বিধি "
+"ব্যৱহাৰ কৰা হয়। এই বিধি, আৰু সিহঁতক প্ৰয়োগ কৰাৰ পৰিস্থিতি, এনে ধৰণৰ।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -86,6 +86,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"চিস্টেম ইনপুট উজ্জ্বল কৰিবলে ব্যৱহাৰ কৰা হয়, শ্বেল কমান্ডসমূহ, ফাইল নামসমূহ "
+"আৰু পথসমূহ অন্তৰভুক্ত কৰাকৈ। কি' আৰু কি' সংযুক্তিসমূহ উজ্জ্বল কৰাৰ বাবেও "
+"ব্যৱহাৰ কৰা হয়। উদাহৰণস্বৰূপ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -98,10 +101,9 @@ msgid ""
 "command at the shell prompt and press <keycap>Enter</keycap> to execute the "
 "command."
 msgstr ""
-"আপোনাৰ বৰ্ত্তমানৰ পঞ্জিকাত<filename>my_next_bestselling_novel</filename> ৰ "
-"বিষয়বস্তু চাবলৈ, শ্বেল প্ৰ'মপ্টত <command>cat "
-"my_next_bestselling_novel</command> লিখকআৰু আদেশ চলাবলৈ "
-"<keycap>Enter</keycap> টিপক ।"
+"আপোনাৰ বৰ্ত্তমানৰ ডাইৰেকটৰিত<filename>my_next_bestselling_novel</filename> ৰ"
+" সমল চাবলৈ, শ্বেল প্ৰ'মপ্টত <command>cat my_next_bestselling_novel</command>"
+" লিখক আৰু কমান্ড চলাবলৈ <keycap>Enter</keycap> টিপক।"
 
 #. Tag: para
 #, no-c-format
@@ -109,6 +111,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"উপৰক্তত এটা ফাইল নাম, এটা শ্বেল কমান্ড আৰু এটা কি' অন্তৰ্ভুক্ত আছে, সকলো "
+"mono-spaced bold ত পৰিৱেশন কৰা আৰু সকলোকে পৃথক কৰিব পাৰি, ধন্যবাদ "
+"পৰিপ্ৰেক্ষতিতলৈ।"
 
 #. Tag: para
 #, no-c-format
@@ -116,13 +121,15 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"কি' সংযুক্তিসমূহ এটা সূকীয়া কি'ৰ পৰা যোগ চিহ্ন দ্বাৰা পৃথক কৰিব পাৰি যি এটা "
+"কি' সংযুক্তিৰ প্ৰতিটো অংশ সংযোগ কৰে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr "আদেশ চলাবলৈ <keycap>Enter</keycap> টিপক । "
+msgstr "কমান্ড চলাবলৈ <keycap>Enter</keycap> টিপক। "
 
 #. Tag: para
 #, no-c-format
@@ -131,6 +138,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"এটা ভাৰচুৱেল টাৰ্মিনেললৈ যাবলে "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" টিপক।"
 
 #. Tag: para
 #, no-c-format
@@ -138,6 +148,8 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"প্ৰথম উদাহৰণে টিপিবলে এটা বিশেষ কি' উজ্জ্বল কৰে। দ্বিতীয় সংযুক্তিয়ে এটা কি' "
+"সংযুক্তি উজ্জ্বল কৰ: একে সময়তে টিপা তিনিটা কি'ৰ এটা সংহতি।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -148,9 +160,9 @@ msgid ""
 " and returned values mentioned within a paragraph will be presented as "
 "above, in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"উৎসৰ কোডৰ কথা আলোচনা কৰিলে, এটা পৰিচ্ছেদত থকা class names, methods, "
-"functions, variable names আৰু returned values ওপৰৰ ধৰণেদেখুওৱা হ'ব, <literal"
-">mono-spaced bold</literal> ত । যেনে:"
+"উৎসৰ ক'ডৰ কথা আলোচনা কৰিলে, এটা দফাত থকা ক্লাচ নামসমূহ, পদ্ধতিসমূহ, ফলনসমূহ,"
+" চলক নামসমূহ আৰু ঘুৰাই দিয়া মানসমূহ ওপৰৰ ধৰণে দেখুওৱা হ'ব, <literal>mono-"
+"spaced bold</literal> ত। যেনে:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -162,10 +174,9 @@ msgid ""
 "<classname>dir</classname> for directories. Each class has its own "
 "associated set of permissions."
 msgstr ""
-"নথিপত্ৰ-সম্বন্ধীয় classes ত<classname>filesystem</classname> নথিপত্ৰপ্ৰণালী "
-"ৰ বাবে, <classname>file</classname> নথিপত্ৰৰ বাবে, আৰু "
-"<classname>dir</classname> পঞ্জিকাৰ বাবে । প্ৰত্যেক class ৰ নিজৰ আজ্ঞাৰ গোট "
-"থাকে ।"
+"ফাইল-সম্বন্ধীয় classes ত<classname>filesystem</classname> ফাইলচিস্টেম ৰ "
+"বাবে, <classname>file</classname> ফাইলৰ বাবে, আৰু <classname>dir</classname>"
+" ডাইৰেকটৰিৰ বাবে। প্ৰত্যেক class ৰ নিজৰ আজ্ঞাৰ গোট থাকে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -183,9 +194,9 @@ msgid ""
 " names; dialog box text; labeled buttons; check-box and radio button labels;"
 " menu titles and sub-menu titles. For example:"
 msgstr ""
-"এটা ব্যৱস্থাপ্ৰণালীত থকা শব্দ আৰু খণ্ডবাক্যৰ কথা কয়, আৰু তাত অনুপ্ৰয়োগৰ "
-"নাম;সম্বাদ বাকছৰ লিপি; লেবেল থকা বুটাম; ছেক বাকছ আৰু ৰেডিঅ' বুটামৰ "
-"লেবেল;মেনুৰ শিৰোনাম আৰু উপ-মেনুৰ শিৰোনাম থাকে । যেনে:"
+"এটা চিস্টেমত থকা শব্দ আৰু খণ্ডবাক্যৰ কথা কয়, আৰু তাত এপ্লিকেচনৰ নাম;ডাইলগ "
+"বাকচৰ লিখনী; লেবেল থকা বুটাম; ছেক বাকচ আৰু ৰেডিঅ' বুটামৰ লেবেল;মেনুৰ শিৰোনাম"
+" আৰু উপ-মেনুৰ শিৰোনাম থাকে। যেনে:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -200,13 +211,12 @@ msgid ""
 "<guibutton>Close</guibutton> to switch the primary mouse button from the "
 "left to the right (making the mouse suitable for use in the left hand)."
 msgstr ""
-"মূখ্য তালিকাৰ বাৰৰ পৰা <menuchoice><guimenu>ব্যৱস্থাপ্ৰণালী "
-"</guimenu><guisubmenu> পছন্দ </guisubmenu><guimenuitem> "
-"মাউছ</guimenuitem></menuchoice> নিৰ্ব্বাচন কৰক <application>মাউছৰ "
-"পছন্দ</application> আৰম্ভ কৰিবলৈ । <guilabel>বুটাম</guilabel> টেবত, "
-"<guilabel>বাওঁ-হতীয়া মাউছ</guilabel> ছেক বাকছ টিপক আৰু <guibutton>বন্ধ "
-"কৰক</guibutton> টিপক মূখ্য মাউছ বুটামক বাওঁৰ পৰা সোঁ-ফাললৈ সলনি কৰিবলৈ (বাওঁ"
-" হাতেৰে মাউছৰ ব্যৱহাৰ কৰা সুবিধা জনক কৰিবলৈ) ।"
+"মূখ্য তালিকাৰ বাৰৰ পৰা <menuchoice><guimenu>চিস্টেম </guimenu><guisubmenu> "
+"পছন্দ </guisubmenu><guimenuitem>মাউছ</guimenuitem></menuchoice> নিৰ্ব্বাচন "
+"কৰক <application>মাউছৰ পছন্দ</application> আৰম্ভ কৰিবলৈ। "
+"<guilabel>বুটাম</guilabel> টেবত, <guilabel>বাওঁ-হতীয়া মাউছ</guilabel> ছেক "
+"বাকচ টিপক আৰু <guibutton>বন্ধ কৰক</guibutton> টিপক মূখ্য মাউছ বুটামক বাওঁৰ "
+"পৰা সোঁ-ফাললৈ সলনি কৰিবলৈ (বাওঁ হাতেৰে মাউছৰ ব্যৱহাৰ কৰা সুবিধা জনক কৰিবলৈ)।"
 
 #. Tag: para
 #, no-c-format
@@ -226,6 +236,20 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"এটা <application>gedit</application> ফাইলত এটা বিশেষ আখৰ সুমুৱাবলে, মূখ্য "
+"মেনু বাৰৰ পৰা "
+"<menuchoice><guimenu>এপ্লিকেচন</guimenu><guisubmenu>আনুসঙ্গিক</guisubmenu><guimenuitem>আখৰ"
+" মেপ</guimenuitem></menuchoice> বাছক। তাৰ পিছত, <application>আখৰ "
+"মেপ</application> মেনু বাৰৰ পৰা "
+"<menuchoice><guimenu>সন্ধান</guimenu><guimenuitem>সন্ধান "
+"কৰক…</guimenuitem></menuchoice> বাছক, <guilabel>সন্ধান</guilabel> ক্ষেত্ৰত "
+"আখৰৰ নাম টাইপ কৰক আৰু <guibutton>পৰৱৰ্তী</guibutton> ক্লিক কৰক। আপুনি বিচৰা "
+"আখৰ <guilabel>আখৰ টেবুল</guilabel> ত উজ্জ্বল কৰা হব। এই উজ্জ্বল আখৰক "
+"<guilabel>কপি কৰিবলে লিখনী</guilabel> ত স্থাপন কৰিবলে দুবাৰ-ক্লিক কৰক আৰু "
+"তাৰ পিছত <guibutton>কপি কৰক</guibutton> বুটাম ক্লিক কৰক। এতিয়া আপোনাৰ "
+"দস্তাবেজত উভতি যাওক আৰু <application>gedit</application> মেনু বাৰৰ পৰা "
+"<menuchoice><guimenu>সম্পাদন</guimenu><guimenuitem>পেইস্ট "
+"কৰক</guimenuitem></menuchoice> বাছক।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -237,10 +261,9 @@ msgid ""
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"ওপৰৰ লিপিত অনুপ্ৰয়োগৰ নাম; ব্যৱস্থাপ্ৰণালৰ ব্যাপকতালিকাৰ নাম আৰু বস্তু ; "
-"অনুপ্ৰয়োগ বিশেষ তালিকাৰ নাম; আৰু বুটাম আৰু এটা GUI সংযোগমাধ্যমত থকালিপি আছে,"
-" সকলোকে proportional bold ত দেখুওৱা হৈছে আৰু সকলোকে সন্দৰ্ভৰ মতে পৃথক কৰিব "
-"পাৰি ।"
+"ওপৰৰ লিখনীত এপ্লিকেচনৰ নাম; চিস্টেমৰ ব্যাপকতালিকাৰ নাম আৰু বস্তু ; এপ্লিকেচন"
+" বিশেষ তালিকাৰ নাম; আৰু বুটাম আৰু এটা GUI আন্তঃপৃষ্ঠত থকা লিখনী আছে, সকলোকে "
+"proportional bold ত দেখুওৱা হৈছে আৰু সকলোকে সন্দৰ্ভৰ মতে পৃথক কৰিব পাৰি।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -265,9 +288,9 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"mono-spaced bold বা proportional bold এই হওক, italics যোগ কৰিলে সলনি কৰিব "
-"পৰা বা বিভিন্ন মান থকা লিপি বুজায় । Italics আপুনি নিবেশ নকৰা লিপি বুজায় বা "
-"পৰিস্থিতিৰ মতে সলনি হোৱা লিপি বুজায় । যেনে:"
+"mono-spaced bold বা proportional bold এই হওক, ইটালিক্স যোগ কৰিলে সলনি কৰিব "
+"পৰা বা বিভিন্ন মান থকা লিখনী বুজায়। ইটালিক্স আপুনি ইনপুট নকৰা লিখনী বুজায় বা"
+" পৰিস্থিতিৰ মতে সলনি হোৱা লিখনী বুজায়। যেনে:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -280,11 +303,10 @@ msgid ""
 "<filename>example.com</filename> and your username on that machine is john, "
 "type <command>ssh john@example.com</command>."
 msgstr ""
-"দূৰৰ যন্ত্ৰত ssh ব্যৱহাৰ কৰি সংযোগ কৰিবলৈ, শ্বেল প্ৰমপ্টত <command>ssh "
+"দূৰৰ মেচিনত ssh ব্যৱহাৰ কৰি সংযোগ কৰিবলৈ, শ্বেল প্ৰমপ্টত <command>ssh "
 "<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></command>"
-" লিখক । দূৰৰ যন্ত্ৰ <filename>example.com</filename> হ'লেল আৰু তাত আপোনাৰ "
-"ব্যৱহাৰকৰোঁতাৰ নাম john হ'লে , <command>ssh john@example.com</command> লিখক "
-"।"
+" লিখক। দূৰৰ মেচিন <filename>example.com</filename> হলে আৰু তাত আপোনাৰ "
+"ব্যৱহাৰকাৰীৰ নাম john হলে , <command>ssh john@example.com</command> লিখক।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -297,9 +319,9 @@ msgid ""
 "is <command>mount -o remount /home</command>."
 msgstr ""
 "<command>mount -o remount <replaceable>file-system</replaceable></command> "
-"আদেশে নাম দিয়া নথিপত্ৰৰপ্ৰণালী পুনঃ তুলি লয় । যেনে, "
-"<filename>/home</filename> নথিপত্ৰৰপ্ৰণালী পুনঃ তুলিবলৈ, আদেশ হ'ল "
-"<command>mount -o remount /home</command> ।"
+"কমান্ডে নাম দিয়া ফাইলচিস্টেম পুনঃ মাউন্ট কৰে। যেনে, "
+"<filename>/home</filename> ফাইলচিস্টেম পুনঃ মাউন্ট কৰিবলৈ, কমান্ড হ'ল "
+"<command>mount -o remount /home</command>।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -311,10 +333,10 @@ msgid ""
 "result as follows: <command><replaceable>package-version-"
 "release</replaceable></command>."
 msgstr ""
-"বৰ্ত্তমানে সংস্থাপিত সৰঞ্জামৰ সংস্কৰণ চাবলৈ, <command>rpm -q "
-"<replaceable>package</replaceable></command> আদেশ ব্যৱহাৰ কৰক । ইয়াৰ ফলাফল "
+"বৰ্ত্তমানে ইনস্টল্ড পেকেইজৰ সংস্কৰণ চাবলৈ, <command>rpm -q "
+"<replaceable>package</replaceable></command> কমান্ড ব্যৱহাৰ কৰক। ইয়াৰ ফলাফল "
 "এনেধৰণৰ হ'ব: <command><replaceable>package-version-"
-"release</replaceable></command> ।"
+"release</replaceable></command>।"
 
 #. Tag: para
 #, no-c-format
@@ -323,6 +345,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"ওপৰত ডাঠ ইটালিকত থকা শব্দসমূহ মন কৰিব — ব্যৱহাৰকাৰীনাম,  domain.name, "
+"ফাইল-চিস্টেম, পেকেইজ, সংস্কৰণ আৰু উন্মোচন। প্ৰতিটো শব্দ এটা প্লেইচহল্ডাৰ, "
+"এটা কমান্ড চলাওতে আপুনি সুমুৱা লিখনীৰ বাবে অথবা চিস্টেম দ্বাৰা প্ৰদৰ্শন কৰা "
+"লিখনীৰ বাবে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -332,22 +358,22 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
-"কোনো কাৰ্য্যৰ নাম প্ৰদৰ্শন কৰাৰ ওপৰিও, italics এ এটা নতুন আৰু গুৰুত্বপূৰ্ণ "
-"শব্দৰ প্ৰথম ব্যৱহাৰো বুজায় । যেনে:"
+"কোনো কাৰ্য্যৰ নাম প্ৰদৰ্শন কৰাৰ ওপৰিও, ইটালিক্সে এটা নতুন আৰু গুৰুত্বপূৰ্ণ "
+"শব্দৰ প্ৰথম ব্যৱহাৰো বুজায়। যেনে:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr "Publican এটা <firstterm>DocBook</firstterm> প্ৰকাশনৰ প্ৰণালী ।"
+msgstr "Publican এটা <firstterm>DocBook</firstterm> প্ৰকাশনৰ চিস্টেম।"
 
 #. Tag: title
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "Pull-quote আচাৰ বিধি"
+msgstr "Pull-quote বিধি"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -357,8 +383,8 @@ msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"টাৰ্মিনেলৰ নিৰ্গম আৰু উৎসৰ কোডৰ তালিকা ওচৰৰ লিপিৰ পৰা প্ৰত্যক্ষ ভাবে আঁতৰুৱা"
-" হয় ।"
+"টাৰ্মিনেলৰ আউটপুট আৰু উৎসৰ ক'ডৰ তালিকা ওচৰৰ লিখনীৰ পৰা প্ৰত্যক্ষ ভাবে "
+"আঁতৰুৱা হয়।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -368,7 +394,7 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced "
 "roman</computeroutput> and presented thus:"
 msgstr ""
-"এটা টাৰ্মিনেললৈ আগবঢ়োৱা নিৰ্গম <computeroutput>mono-spaced "
+"এটা টাৰ্মিনেললৈ আগবঢ়োৱা আউটপুট <computeroutput>mono-spaced "
 "roman</computeroutput> ত নিৰ্ধাৰিত কৰা হয় আৰু এনেধৰণে দেখুওৱা হয়: "
 
 #. Tag: screen
@@ -390,8 +416,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced "
 "roman</computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"উৎস-কোডৰ তালিকাও <computeroutput>mono-spaced roman</computeroutput> ত "
-"নিৰ্ধাৰিত কৰা হয় কিন্তু এনে ধৰণে দেখুৱা আৰু আলোকপাত কৰা হয়:"
+"উৎস-ক'ডৰ তালিকাও <computeroutput>mono-spaced roman</computeroutput> ত "
+"নিৰ্ধাৰিত কৰা হয় কিন্তু এনে ধৰণে দেখুৱা আৰু উজ্জ্বল কৰা হয়:"
 
 #. Tag: title
 # translation auto-copied from project Publican Common, version 3, document
@@ -409,7 +435,7 @@ msgid ""
 "might otherwise be overlooked."
 msgstr ""
 "অৱশেষত, সাধাৰণতে আওকাণ কৰা তথ্যলৈ আকৰ্ষিত কৰিবলৈ আমি তিনিটা প্ৰদৰ্শনৰ ধৰণ "
-"ব্যৱহাৰ কৰোঁ ।"
+"ব্যৱহাৰ কৰোঁ।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -420,9 +446,9 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out"
 " on a trick that makes your life easier."
 msgstr ""
-"সঙ্কেত, চমু পথ বা কাম সম্পূৰ্ণ এটা বৈকল্পিক প্ৰৱেশ হৈছে এটা টোকা । এটা টোকা "
+"সঙ্কেত, চমু পথ বা কাম সম্পূৰ্ণ এটা বৈকল্পিক প্ৰৱেশ হৈছে এটা টোকা। এটা টোকা "
 "আওকাণ কৰিলে কোনো ক্ষতি হ'ব নালাগে, কিন্তু আপোনাৰ জীৱন সহজ কৰা এটা কায়দা "
-"আপুনি এৰি যাব পাৰে ।"
+"আপুনি এৰি যাব পাৰে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -434,10 +460,10 @@ msgid ""
 "before an update will apply. Ignoring a box labeled 'Important' will not "
 "cause data loss but may cause irritation and frustration."
 msgstr ""
-"গুৰুত্বপূৰ্ণ বাকছত সহজে এৰি যোৱা বস্তুৰ বিৱৰণ থাকে: অকল বৰ্ত্তমানৰ অধিবেশনত "
+"গুৰুত্বপূৰ্ণ বাকচত সহজে এৰি যোৱা বস্তুৰ বিৱৰণ থাকে: অকল বৰ্ত্তমানৰ অধিবেশনত "
 "প্ৰভাৱ পেলোৱা বিন্যাসৰ সাল সলনি, বা এটা উন্নয়নৰ প্ৰভাৱ পেলোৱাৰ পূৰ্বে "
-"পুনৰাৰম্ভ কৰিব লগা সেৱাসমূহ । 'গুৰুত্বপূৰ্ণ' লেবেল কৰা বাকছক আওকাণ কৰিলে "
-"তথ্য নেহেৰায় কিন্তু আপুনি পিছত বিৰক্ত আৰু নিৰুৎসাহ হ'ব পাৰে ।"
+"পুনৰাৰম্ভ কৰিব লগা সেৱাসমূহ। 'গুৰুত্বপূৰ্ণ' লেবেল কৰা বাকচক আওকাণ কৰিলে তথ্য"
+" নেহেৰায় কিন্তু আপুনি পিছত বিৰক্ত আৰু নিৰুৎসাহ হ'ব পাৰে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -447,5 +473,5 @@ msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"সতৰ্কবাণীক আওকাণ কৰিব নালাগে । সতৰ্কবাণী আওকাণ কৰিলে অতি সম্ভৱ তথ্য হেৰুৱাব "
-"পাৰে ।"
+"সতৰ্কবাণীক আওকাণ কৰিব নালাগে। সতৰ্কবাণী আওকাণ কৰিলে অতি সম্ভৱ তথ্য হেৰুৱাব "
+"পাৰে।"
