--- a/publican/datadir/Common_Content/common/as-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/as-IN/Feedback.po
@@ -1,13 +1,14 @@
 # translation of Feedback.po to Assamese
 # Amitakhya Phukan <aphukan@fedoraproject.org>, 2007.
 # Amitakhya Phukan <aphukan@redhat.com>, 2008.
+# ngoswami <ngoswami@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-28T06:49:34\n"
-"PO-Revision-Date: 2008-10-06 08:28-0400\n"
-"Last-Translator: Amitakhya Phukan <aphukan@redhat.com>\n"
+"PO-Revision-Date: 2012-08-30 03:52-0400\n"
+"Last-Translator: ngoswami <ngoswami@fedoraproject.org>\n"
 "Language-Team: Assamese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +22,7 @@ msgstr ""
 # Feedback
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "আমাক মতামতৰ প্ৰয়োজন!"
+msgstr "আমাক সহাঁৰিৰ প্ৰয়োজন!"
 
 #. Tag: indexterm
 # translation auto-copied from project Publican Common, version 3, document
@@ -31,7 +32,7 @@ msgid ""
 "<primary>feedback</primary> <secondary>contact information for this "
 "manual</secondary>"
 msgstr ""
-"<primary>মতামত</primary> <secondary>এই হাতপুথিৰ বাবে যোগাযোগৰ "
+"<primary>সহাঁৰি</primary> <secondary>এই হাতপুথিৰ বাবে যোগাযোগৰ "
 "তথ্য</secondary>"
 
 #. Tag: para
@@ -41,5 +42,5 @@ msgstr ""
 msgid ""
 "You should over ride this by creating your own local Feedback.xml file."
 msgstr ""
-"আপোনাৰ নিজৰ স্থানীয় Feedback.xml নথিপত্ৰ সৃষ্টি কৰি আপুনি ইয়াৰ প্ৰভাৱ নোহোৱা"
-" কৰক ।"
+"আপুনি ইয়াক আপোনাৰ নিজৰ স্থানীয় Feedback.xml ফাইল সৃষ্টি কৰি অভাৰৰাইড কৰিব "
+"লাগে।"
