--- a/publican/datadir/Common_Content/common/bn-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/bn-IN/Conventions.po
@@ -1,11 +1,12 @@
 # translation of Conventions.po to Bengali INDIA
 # Runa Bhattacharjee <runab@redhat.com>, 2007, 2008, 2009.
+# Runa Bhattacharjee <runab@redhat.com>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 04:45-0500\n"
+"PO-Revision-Date: 2012-08-30 02:59-0400\n"
 "Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
 "Language-Team: Bengali INDIA <anubad@lists.ankur.org.in>\n"
 "MIME-Version: 1.0\n"
@@ -85,6 +86,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"সিস্টেমের জন্য ইনপুট যেমন শেল কমান্ড, ফাইলের নাম ও পাথ লিখতে ব্যবহার করা "
+"হয়েছে। কি-র নাম অথবা কি সংকলন উজ্জ্বল করে চিহ্নিত করার জন্যও ব্যবহৃত। "
+"উদাহরণস্বরূপ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -109,6 +113,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"উপরোক্ত পংক্তির মধ্যে একটি ফাইলের নাম, শেল কমান্ড ও কি-র নাম মোনো-স্পেস্ড "
+"বোল্ডে লেখা হয়েছে এবং প্রসঙ্গ অনুযায়ী সেগুলি পৃথকরূপে চিহ্নিত করা সম্ভব।"
 
 #. Tag: para
 #, no-c-format
@@ -116,6 +122,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"কি সংকলনের ক্ষেত্রে প্রতিটি কি-র মধ্যে উপস্থিত যোগ চিহ্ন দ্বারা সংকলনগুলিকে "
+"পৃথক কি থেকে ভিন্ন রূপে সনাক্ত করা যাবে। উদাহরণস্বরূপ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -131,6 +139,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"ভার্চুয়াল টার্মিন্যালে পরিবর্তনের জন্য "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" টিপুন।"
 
 #. Tag: para
 #, no-c-format
@@ -138,6 +149,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"প্রথম উদাহরণে, টেপার উদ্দেশ্যে একটি সুনিশ্চিত কি উজ্জ্বলিত করা হয়েছে। "
+"দ্বিতীয় উদাহরণে একটি কি-সংকলন উজ্জ্বলিত করা হয়েছে: এই ক্ষেত্রে তিনটি কি "
+"একত্রিত ভাবে টেপা হয়।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -226,6 +240,21 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"একটি <application>gedit</application> ফাইলের মধ্যে বিশেষ অক্ষর লেখার জন্য, "
+"প্রধান মেনু থেকে <menuchoice><guimenu>অ্যাপ্লিকেশন "
+"তালিকা</guimenu><guisubmenu>আনুষঙ্গিক</guisubmenu><guimenuitem>অক্ষরের "
+"ম্যাপ</guimenuitem></menuchoice> নির্বাচন করুন। এর পরে, <application>অক্ষরের"
+" ম্যাপ</application> মেনু বার থেকে "
+"<menuchoice><guimenu>অনুসন্ধান</guimenu><guimenuitem>অনুসন্ধান…</guimenuitem></menuchoice>"
+" নির্বাচন করুন ও , <guilabel>অনুসন্ধান</guilabel> ক্ষেত্রে অক্ষরের নাম লিখে "
+"<guibutton>পরবর্তী</guibutton> টিপুন। সন্ধান করা অক্ষরটি <guilabel>অক্ষরের "
+"টেবিল</guilabel>-এ উজ্জ্বলিত করা হবে। <guilabel>কপি করার জন্য চিহ্নিত "
+"বিষয়বস্তু</guilabel> শীর্ষক ক্ষেত্রে এই  উজ্জ্বলিত অক্ষরটি অন্তর্ভুক্ত করা "
+"জন্য সেটির উপর দুইবার ক্লিক করুন ও এর পরে <guibutton>করি করুন</guibutton> "
+"বাটনটি টিপুন। এর পরে, নথিটিতে প্রত্যাবর্তন করে "
+"<application>gedit</application>-র মেনু-বার থেকে "
+"<menuchoice><guimenu>সম্পাদনা</guimenu><guimenuitem>পেস্ট "
+"করুন</guimenuitem></menuchoice> নির্বাচন করুন।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -324,6 +353,9 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"উপরের অংশে গাঢ় ও তেরছা ভাবে লেখা শব্দগুলির প্রতি লক্ষ্য দিন — username, "
+"domain.name, file-system, package, version ও release। কমান্ড লেখার সময় অথবা "
+"সিস্টেম দ্বারা কোনো তথ্য প্রদর্শনের সময় এই শব্দগুলি পরিবর্তন করা হবে।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -378,6 +410,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
