--- a/publican/datadir/Common_Content/common/fr-FR/Conventions.po
+++ b/publican/datadir/Common_Content/common/fr-FR/Conventions.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugzilla.redhat.com\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2012-08-29 08:45-0400\n"
+"PO-Revision-Date: 2012-08-30 12:43-0400\n"
 "Last-Translator: samfreemanz <sfriedma@redhat.com>\n"
 "Language-Team: French <trans-fr@lists.fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
@@ -91,6 +91,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"Utilisé pour surligner certaines entrées du système, y compris les commandes"
+" shell, les noms de fichiers et les chemins d'accès. Également utilisé pour "
+"surligner les touches et les combinaisons de touches. Par exemple :"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -115,6 +118,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"L'exemple ci-dessus contient un nom de fichier, une commande shell et une "
+"touche, tous présentés sous forme de caractères gras à espacement fixe et "
+"tous bien distincts grâce au contexte."
 
 #. Tag: para
 #, no-c-format
@@ -122,6 +128,9 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"Les combinaisons de touches se distinguent des touches individuelles par le "
+"signe « plus », qui connecte les différentes parties de la combinaison. Par "
+"exemple :"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -147,6 +156,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"Le premier exemple présente une touche particulière sur laquelle appuyer. Le"
+" second exemple affiche une combinaison de touches : un ensemble de trois "
+"touches sur lesquelles il faut appuyer simultanément."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
