--- a/publican/datadir/Common_Content/common/gu-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/gu-IN/Conventions.po
@@ -1,13 +1,14 @@
 # translation of publican.common_content.Conventions.po to Gujarati
 # Ankit Patel <ankit@redhat.com>, 2007.
 # Sweta Kothari <swkothar@redhat.com>, 2008, 2009, 2010.
+# swkothar <swkothar@redhat.com>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: publican.common_content.Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2010-09-27 07:41-0400\n"
-"Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
+"PO-Revision-Date: 2012-08-30 07:14-0400\n"
+"Last-Translator: swkothar <swkothar@redhat.com>\n"
 "Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -86,6 +87,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"પ્રકાશિત સિસ્ટમ ઇનપુટ વપરાય છે, શેલ આદેશો, ફાઇલ નામો અને પાથને સમાવી રહ્યા "
+"છે, પ્રકાશિત વપરાય છે. પ્રકાશિત કી અને કી સંયોજનનો પણ ઉપયોગ થાય છે. ઉદાહરણ "
+"તરીકે:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -109,6 +113,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"ઉપર સમાવેલ ફાઇલ નામ, શેલ આદેશ અને કી, બધા એક જ-જગ્યા થયેલ બોલ્ડ અને બધા "
+"વિશિષ્ટ સંદર્ભને આભાર આપે છે."
 
 #. Tag: para
 #, no-c-format
@@ -116,6 +122,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"વત્તા ચિહ્ન દ્દારા વ્યક્તિગત કીમાંથી કી સંયોજનોને અલગ પાડી શકાય છે કે જે કી "
+"સંયોજનનાં દરેક ભાગને જોડે છે.ઉદાહરણ તરીકે:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -131,6 +139,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"વર્ચ્યુઅલ ટર્મિનલ પર સ્વિચ કરવા માટે "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" દબાવો."
 
 #. Tag: para
 #, no-c-format
@@ -138,6 +149,8 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"પહેલુ ઉદાહરણ વ્યક્તિગત કીને દબાવવા માટે પ્રકાશિત કરે છે. બીજુ ઉદાહરણ કી "
+"સંયોજનને પ્રકાશિત કરે છે: ત્રણ કીનો સમૂહ એકસાથે દબાવેલ છે."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -226,6 +239,20 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"<application>gedit</application> ફાઇલમાં ખાસ અક્ષરને દાખલ કરવા માટે, મુખ્ય "
+"મેનુ પટ્ટીમાંથી "
+"<menuchoice><guimenu>કાર્યક્રમ</guimenu><guisubmenu>ઉપસાધનો</guisubmenu><guimenuitem>અક્ષર"
+" નક્ષો</guimenuitem></menuchoice> પસંદ કરો. પછી, <application>અક્ષર "
+"નક્ષો</application> મેનુ પટ્ટીમાંથી "
+"<menuchoice><guimenu>શોધો</guimenu><guimenuitem>શોધો…</guimenuitem></menuchoice>"
+" ને પસંદ કરો, <guilabel>શોધ</guilabel> ક્ષેત્રમાં અક્ષરનુ નામ લખો અને "
+"<guibutton>આગળ</guibutton> બટન પર ક્લિક કરો. અક્ષર જે તમે શોધ્યો છે તે "
+"<guilabel>અક્ષર કોષ્ટક</guilabel> માં પ્રકાશિત થશે. <guilabel>નકલ કરવા "
+"લખાણ</guilabel> ક્ષેત્રમાં સ્થિત કરવા માટે પ્રકાશિત થયેલ અક્ષર પર બે વાર "
+"ક્લિક કરો પછી <guibutton>નકલ કરો</guibutton> બટન પર ક્લિક કરો. હવે તમારાં "
+"દસ્તાવેજમાં પાછા જાવ અને <application>gedit</application> મેનુ પટ્ટીમાંથી "
+"<menuchoice><guimenu>ફેરફાર "
+"કરો</guimenu><guimenuitem>ચોંટાડો</guimenuitem></menuchoice> પસંદ કરો."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -322,6 +349,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"નોંધો કે ઉપર શબ્દો ઘટ્ટ ઇટાલિકમાં છે — વપરાશકર્તાનામ, ડોમેઇન નામ, "
+"ફાઇલ-સિસ્ટમ, પેકેજ, આવૃત્તિ અને પ્રકાશન. દરેક શબ્દ પ્લેસહોલ્ડર છે, ક્યાંતો "
+"લખાણ માટે જ્યારે આદેશને અદા કરી રહ્યા હોય અથવા સિસ્ટમ દ્દારા લખાણ દર્શાવેલ "
+"હોય."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -377,6 +408,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -387,7 +420,7 @@ msgid ""
 "roman</computeroutput> but add syntax highlighting as follows:"
 msgstr ""
 "સ્ત્રોત-કોડ યાદીઓ <computeroutput>mono-spaced roman</computeroutput> માં પણ "
-"સુયોજિત છે પરંતુ નીચે પ્રમાણે પ્રકાશિત કરવા માટે સિન્ટૅક્સ ને ઉમેરોેલ છે:"
+"સુયોજિત છે પરંતુ નીચે પ્રમાણે પ્રકાશિત કરવા માટે સિન્ટૅક્સ ને ઉમેરાય છે:"
 
 #. Tag: title
 # translation auto-copied from project Publican Common, version 3, document
