--- a/publican/datadir/Common_Content/common/it-IT/Conventions.po
+++ b/publican/datadir/Common_Content/common/it-IT/Conventions.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2012-08-29 11:16-0400\n"
+"PO-Revision-Date: 2012-08-30 12:30-0400\n"
 "Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
 "Language-Team: <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -244,6 +244,21 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"Per inserire un carattere speciale in un file "
+"<application>gedit</application> selezionare "
+"<menuchoice><guimenu>Applicazioni</guimenu><guisubmenu>Accessori</guisubmenu><guimenuitem>Mappa"
+" del carattere</guimenuitem></menuchoice> dalla barra del menu principale. "
+"Selezionare successivamente "
+"<menuchoice><guimenu>Cerca</guimenu><guimenuitem>Trova…</guimenuitem></menuchoice>"
+" dal menu  <application>Mappa del carattere</application>, digitare il nome "
+"desiderato nel campo <guilabel>Cerca</guilabel> e selezionare "
+"<guibutton>Successivo</guibutton>. Il carattere desiderato sarà evidenziato "
+"nella <guilabel>Tabella dei caratteri</guilabel>. Eseguire un doppio clic "
+"sul carattere per poterlo posizionare nel campo <guilabel>Testo da "
+"copiare</guilabel> e successivamente fare clic sul pulsante "
+"<guibutton>Copia</guibutton>. Ritornare sul documento e selezionare "
+"<menuchoice><guimenu>Modifica</guimenu><guimenuitem>Incolla</guimenuitem></menuchoice>"
+" dalla barra del menu di <application>gedit</application>."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
