--- a/publican/datadir/Common_Content/common/kn-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/kn-IN/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to Kannada
 # Shankar Prasad <svenkate@redhat.com>, 2007, 2008, 2009.
+# shanky <shanky@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 02:38-0500\n"
-"Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
+"PO-Revision-Date: 2012-08-30 05:59-0400\n"
+"Last-Translator: shanky <shanky@fedoraproject.org>\n"
 "Language-Team: Kannada <kde-l10n-kn@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -86,6 +87,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"ಶೆಲ್‌ ಆಜ್ಞೆಗಳು, ಕಡತದ ಹೆಸರುಗಳು ಹಾಗು ಮಾರ್ಗಗಳಂತಹ ಗಣಕದ ಇನ್‌ಪುಟ್ ಅನ್ನು ಹೈಲೈಟ್ "
+"ಮಾಡಲು ಬಳಸಲಾಗುತ್ತದೆ. ಅಲ್ಲದೆ ಕೀಲಿಗಳನ್ನು ಹಾಗು ಕೀಲಿ-ಸಂಯೋಜನೆಗಳನ್ನೂ ಸಹ ಹೈಲೈಟ್ "
+"ಮಾಡಲು ಬಳಸಲಾಗುತ್ತದೆ. ಉದಾಹರಣೆಗೆ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -109,6 +113,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"ಮೇಲೆ ಹೇಳಲಾಗಿದ್ದರಲ್ಲಿ ಒಂದು ಕಡತದ ಹೆಸರು, ಒಂದು ಶೆಲ್‌ ಆಜ್ಞೆ ಹಾಗು ಒಂದು ಕೀಲಿಯು ಇದೆ,"
+" ಹಾಗು ಅವುಗಳೆಲ್ಲವೂ  mono-spaced bold ನಲ್ಲಿ ಸೂಚಿಸಲಾಗಿದ್ದರಿಂದ ಬಾಕಿ ಪಠ್ಯಗಳಿಗಿಂತ "
+"ಪ್ರತ್ಯೇಕವಾಗಿ ಕಾಣುತ್ತವೆ."
 
 #. Tag: para
 #, no-c-format
@@ -116,6 +123,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"ಕೀಲಿ ಸಂಯೋಜನೆಯಲ್ಲಿನ ಪ್ರತಿ ಭಾಗಗಳನ್ನು ಜೋಡಿಸುವ ಪ್ಲಸ್ ಚಿಹ್ನೆಯು ಕೀಲಿ ಸಂಯೋಜನೆ ಮತ್ತು"
+" ಪ್ರತ್ಯೇಕ ಕೀಲಿಯ ನಡುವಿನ ವ್ಯತ್ಯಾಸವಾಗಿರುತ್ತದೆ. ಉದಾಹರಣೆಗೆ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -131,6 +140,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"ವರ್ಚುವಲ್ ಟರ್ಮಿನಲ್‌ಗೆ ಹೋಗಲು "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" ಅನ್ನು ಒತ್ತಿ."
 
 #. Tag: para
 #, no-c-format
@@ -138,6 +150,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"ಮೊದಲನೆ ಉದಾಹರಣೆಯು ನಿಗದಿತ ಕೀಲಿಯನ್ನು  ಒತ್ತಲು ಹೈಲೈಟ್ ಮಾಡುತ್ತದೆ. ಎರಡನೆಯದು ಒಂದು "
+"ಕೀಲಿ ಸಂಯೋಜನೆಯನ್ನು ಹೈಲೈಟ್‌ ಮಾಡುತ್ತದೆ: ಮೂರು ಕೀಲಿಗಳನ್ನು ಏಕಕಾಲದಲ್ಲಿ "
+"ಒತ್ತಲಾಗುತ್ತದೆ."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -227,6 +242,22 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"<application>gedit</application> ಕಡತಕ್ಕೆ ಒಂದು ವಿಶೇಷವಾದ ಅಕ್ಷರವನ್ನು ಸೇರಿಸಲು, "
+"ಮುಖ್ಯ ಮೆನುವಿನಿಂದ "
+"<menuchoice><guimenu>ಅನ್ವಯಗಳು</guimenu><guisubmenu>ಸಲಕರಣೆಗಳು</guisubmenu><guimenuitem>ಅಕ್ಷರ"
+" ನಕ್ಷೆ</guimenuitem></menuchoice> ಅನ್ನು ಆರಿಸಿ. ನಂತರ,  <application>ಅಕ್ಷರ "
+"ನಕ್ಷೆ</application> ಮೆನು ಪಟ್ಟಿಯಿಂದ "
+"<menuchoice><guimenu>ಹುಡುಕು</guimenu><guimenuitem>ಹುಡುಕಿ…</guimenuitem></menuchoice>"
+" ಅನ್ನು ಆರಿಸಿ, type the name of the character in the "
+"<guilabel>ಹುಡುಕು</guilabel> ಎಂಬ ಸ್ಥಳದಲ್ಲಿ ಅಕ್ಷರದ ಹೆಸರನ್ನು ನಮೂದಿಸಿ ನಂತರ "
+"<guibutton>ಮುಂದಕ್ಕೆ</guibutton> ಅನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ. ಅಗತ್ಯವಿರುವ ಅಕ್ಷರವನ್ನು "
+"<guilabel>ಅಕ್ಷರ ಕೋಷ್ಟಕ</guilabel>ದಲ್ಲಿ ಹೈಲೈಟ್ ಮಾಡಲಾಗುತ್ತದೆ. <guilabel>ಪ್ರತಿ "
+"ಮಾಡಬೇಕಿರುವ ಪಠ್ಯ</guilabel> ಎನ್ನುವ ಸ್ಥಳದಲ್ಲಿ ಇರಿಸಲು ಈ ಹೈಲೈಟ್ ಮಾಡಲಾದ ಅಕ್ಷರದ "
+"ಮೇಲೆ ಎರಡು ಬಾರಿ ಕ್ಲಿಕ್ ಮಾಡಿ ನಂತರ <guibutton>ಪ್ರತಿಮಾಡು</guibutton> ಎನ್ನುವ "
+"ಗುಂಡಿಯನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ. ಈಗ ನಿಮ್ಮ ದಸ್ತಾವೇಜಿಗೆ ಹೋಗಿ ನಂತರ "
+"<application>gedit</application>ಮೆನು ಪಟ್ಟಿಯಿಂದ "
+"<menuchoice><guimenu>ಸಂಪಾದನೆ</guimenu><guimenuitem>ಅಂಟಿಸು</guimenuitem></menuchoice>"
+" ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ ."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -326,6 +357,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"ಮೇಲಿನ ಬೋಲ್ಡ್‍ ಇಟ್ಯಾಲಿಕ್ಸಿನಲ್ಲಿರುವ ಪದಗಳನ್ನು ಗಮನಿಸಿ — ಬಳಕೆದಾರಹೆಸರು, "
+"domain.name, ಕಡತ-ವ್ಯವಸ್ಥೆ, ಪ್ಯಾಕೇಜ್, ಆವೃತ್ತಿ ಮತ್ತು ಬಿಡುಗಡೆ. ನೀವು ನಮೂದಿಸುವ "
+"ಪ್ರತಿಯೊಂದು ಪಠ್ಯಕ್ಕಾಗಿ ಅಥವ ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ತೋರಿಸಲಾಗುವ ಪಠ್ಯಕ್ಕಾಗಿ, ಪ್ರತಿಯೊಂದು "
+"ಪದವೂ ಸಹ ಪ್ಲೇಸ್‌ಹೋಲ್ಡರ್ ಆಗಿರುತ್ತದೆ."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
