--- a/publican/datadir/Common_Content/common/mr-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/mr-IN/Conventions.po
@@ -2,13 +2,14 @@
 # sandeep shedmake <sandeep.shedmake@gmail.com>, 2007.
 # Sandeep Shedmake <sandeep.shedmake@gmail.com>, 2008.
 # Sandeep Shedmake <sshedmak@redhat.com>, 2009.
+# sandeeps <sandeeps@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 05:54-0500\n"
-"Last-Translator: Sandeep Shedmake <sshedmak@redhat.com>\n"
+"PO-Revision-Date: 2012-08-30 04:36-0400\n"
+"Last-Translator: sandeeps <sandeeps@fedoraproject.org>\n"
 "Language-Team: Marathi <fedora-trans-mr@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -87,6 +88,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"प्रणाली इन्पुट, सर्व शेल आदेश, फाइल नावे व मार्ग ठळक करण्यासाठी वापरले जाते."
+" कि व कि जोडणी ठळक करण्यासाठी देखिल वापरले जाते. उदाहरणार्थ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -99,11 +102,11 @@ msgid ""
 "command at the shell prompt and press <keycap>Enter</keycap> to execute the "
 "command."
 msgstr ""
-"वर्तमान कार्यरत संचयीका अंतर्गत "
-"<filename><filename>my_next_bestselling_novel</filename></filename> फाइलचे "
-"अनुक्रम पाहण्याकरीता, शेल प्रॉम्पट वर <command>cat "
-"my_next_bestselling_novel</command> प्रविष्ट करा व आदेश चालविण्याकरीता "
-"<keycap>Enter</keycap> आदेश चालवा."
+"सध्याच्या कार्रत डिरेक्ट्रीमध्ये "
+"<filename><filename>my_next_bestselling_novel</filename> फाइलची अंतर्भुत "
+"माहिती  पाहण्याकरीता, शेल प्रॉम्पट वर <command>cat "
+"my_next_bestselling_novel</command> आदेश द्या व आदेश चालविण्याकरीता "
+"<keycap>Enter</keycap> दाबा."
 
 #. Tag: para
 #, no-c-format
@@ -111,6 +114,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"वरीलमध्ये पाइलचे नाव, शेल आदेश व कि समाविष्टीत आहे, सर्व मोनो-स्पेस्ड् "
+"बोल्डमध्ये प्रस्तुत केले जातात व सगळ्यांचा संदर्भ वेगळा असतो."
 
 #. Tag: para
 #, no-c-format
@@ -118,6 +123,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"प्लस् चिन्हाच्या मदतीने, जे कि जोडणीला प्रत्येक भागासह जुळते; व्यक्तिगत "
+"किपासून कि जोडणीला वेगळे करणे शक्य आहे. उदाहरणार्थ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -133,6 +140,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"वर्च्युअल टर्मिनलचा वापर करण्यासाठी "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" दाबा."
 
 #. Tag: para
 #, no-c-format
@@ -140,6 +150,8 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"पहिले उदाहरण दाबण्याजोगी ठराविक किला ठळक करतो. दुसरे उदाहरण कि जोडणी ठळक "
+"करतो: तीन किज्ला एकाचवेळी दाबल्यास."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -227,6 +239,20 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"<application>जिएडिट</application> फाइलमध्ये विशेष अक्षर अंतर्भुत करण्यासाठी,"
+" मुख्य मेन्यु पट्टीतून "
+"<menuchoice><guimenu>ॲप्लिकेशन्स्</guimenu><guisubmenu>ॲसेसरिज्</guisubmenu><guimenuitem>कॅरेक्टर"
+" मॅप</guimenuitem></menuchoice> पसंत करा. पुढे, "
+"<menuchoice><guimenu>शोधा</guimenu><guimenuitem>शोधा…</guimenuitem></menuchoice>"
+" पसंत करा, <application>कॅरेक्टर मॅप</application> मेन्यु पट्टीतून, "
+"<guilabel>शोधा</guilabel> क्षेत्रात अक्षराचे नाव टाइप करा व "
+"<guibutton>पुढे</guibutton> बटन क्लिक करा. प्राप्य अक्षराला "
+"<guilabel>कॅरेक्टर टेबल</guilabel> येथे ठळक केले जाईल. <guilabel>प्रत "
+"बनवण्याजोगी मजकूर</guilabel> क्षेत्रात ह्या ठळक अक्षराला स्थित करण्यासाठी "
+"दोनवेळा क्लिक करा व त्यानंतर <guibutton>प्रत बनवा</guibutton> बटनावर क्लिक "
+"करा. आता दस्तऐवजांचा वापर करा व <menuchoice><guimenu>संपादित "
+"करा</guimenu><guimenuitem>चिकटवा</guimenuitem></menuchoice> पसंत करा, "
+"<application>जिएडिट</application> मेन्यु पट्टीतून."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -324,6 +350,9 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"वरील बोल्ड इटॅलिक्स् शब्दांकडे लक्ष द्या — वापरकर्तानाव, domain.name, "
+"फाइल-प्रणाली, संकुल, आवृत्ती व प्रकाशन. प्रत्येक शब्द प्लेसफोल्ड आहे, एकतर "
+"आदेश देतेवेळी दिलेल्या मजकूरकरीता किंवा प्रणालीतर्फे दाखवलेल्या मजकूरकरीता."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -379,6 +408,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"पुस्ते        डेस्कटॉप   दस्तऐवजीकरण  मसुदा  mss    फोटोज   स्टफ्  svn\n"
+"books_tests  डेस्कटॉप1  डाऊनलोड्स्      प्रतिमा  नोट्स्  स्क्रिप्ट्स्  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
