--- a/publican/datadir/Common_Content/common/zh-TW/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-TW/Conventions.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2012-08-29 11:52-0400\n"
+"PO-Revision-Date: 2012-08-30 09:06-0400\n"
 "Last-Translator: snowlet <snowlet@fedoraproject.org>\n"
 "Language-Team: Traditional Chinese <zh@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr "文件規範"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr "本指南使用了幾種規範，以強調特定文字與詞組，並著重於特定的資訊。"
+msgstr "本指南使用了幾種規範，以強調特定文字與詞組，並提示讀者注意特定的資訊。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -56,7 +56,7 @@ msgstr ""
 # Conventions
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr "排版上的規範"
+msgstr "排版規範"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -66,7 +66,7 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr "此處使用四種排版規範，用來強調特定文字與詞組。這些常規以及它們所適用於的情況如下。"
+msgstr "此處使用四種排版規範，用來強調特定文字與詞組。這些規範及其適用情況如下。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -94,7 +94,7 @@ msgid ""
 "command."
 msgstr ""
 "若要查看位於您目前工作目錄中的 <filename>my_next_bestselling_novel</filename> 檔案的話，請在 shell"
-" 提示中輸入 <command>cat my_next_bestselling_novel</command> 指令，再按下 "
+" 提示符號下輸入 <command>cat my_next_bestselling_novel</command> 指令，再按下 "
 "<keycap>Enter</keycap> 鍵執行該指令。"
 
 #. Tag: para
@@ -134,7 +134,7 @@ msgstr ""
 msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
-msgstr "第一段強調了使用者應按下特定的按鍵，第二段則表示使用者應按下一組組合鍵：同時按下三個按鍵。"
+msgstr "第一段強調了使用者應按下特定的按鍵，第二段則表示使用者應按下一組組合鍵，亦即同時按下三個按鍵。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -146,7 +146,7 @@ msgid ""
 "above, in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
 "若討論到原始碼的話，段落中所提及的 class 名稱、method、function、variable "
-"名稱與回傳值，都將會如上一般地以<literal>固定寬度粗體字型</literal>顯示。例如："
+"名稱與回傳值，都將會如上一般地以「<literal>固定寬度粗體字型</literal>」顯示。例如："
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -193,10 +193,7 @@ msgid ""
 "<guibutton>Close</guibutton> to switch the primary mouse button from the "
 "left to the right (making the mouse suitable for use in the left hand)."
 msgstr ""
-"由主選單選取 "
-"<menuchoice><guimenu>系統</guimenu><guisubmenu>偏好設定</guisubmenu><guimenuitem>滑鼠</guimenuitem></menuchoice>"
-" "
-"來啟動「<application>滑鼠偏好設定</application>」。請在「<guilabel>按鈕</guilabel>」分頁中點選「<guilabel>左手操作滑鼠</guilabel>」核取方塊並按下「<guibutton>關閉</guibutton>」，將主滑鼠按鍵由左鍵切換至右鍵（這可讓滑鼠適合以左手使用）。"
+"由主選單選取「<menuchoice><guimenu>系統</guimenu><guisubmenu>偏好設定</guisubmenu><guimenuitem>滑鼠</guimenuitem></menuchoice>」來啟動「<application>滑鼠偏好設定</application>」。請在「<guilabel>按鈕</guilabel>」分頁中點選「<guilabel>左手操作滑鼠</guilabel>」核取方塊並按下「<guibutton>關閉</guibutton>」，將主滑鼠按鍵由左鍵切換至右鍵（這可讓滑鼠適合以左手使用）。"
 
 #. Tag: para
 #, no-c-format
@@ -244,9 +241,9 @@ msgid ""
 "Italic</replaceable></application>"
 msgstr ""
 "<command><replaceable>Mono-spaced Bold "
-"Italic</replaceable></command>（固定粗體斜體字型）或是 "
+"Italic</replaceable></command>（固定寬度粗體斜體字型）或是 "
 "<application><replaceable>Proportional Bold "
-"Italic</replaceable></application>（相稱粗體斜體字型）"
+"Italic</replaceable></application>（浮動寬度粗體斜體字型）"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -258,8 +255,7 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"無論是 Mono-spaced Bold 或是 Proportional "
-"Bold，額外的斜體字型便表示可替換或是變數文字。斜體字型代表您不會照字面輸入的文字，或是會依照情況而改變的文字。比方說："
+"不管是固定或浮動寬度的粗體字，加上斜體後便表示可替換的文字或是變數文字。斜體字型代表您不會照字面輸入的文字，或是會依照情況而改變的文字。比方說："
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -272,8 +268,8 @@ msgid ""
 "<filename>example.com</filename> and your username on that machine is john, "
 "type <command>ssh john@example.com</command>."
 msgstr ""
-"若要透過使用 ssh 來連至一部遠端機器，請在 shell 提示中輸入 <command>ssh "
-"<replaceable>用戶名稱</replaceable>@<replaceable>網域.名稱</replaceable></command>。若遠端機器為"
+"若要透過使用 ssh 連至遠端機器，請在 shell 提示符號下輸入 <command>ssh "
+"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></command>。若遠端機器為"
 " <filename>example.com</filename> 而您在該機器上的用戶名稱為 john 的話，請輸入 <command>ssh "
 "john@example.com</command>。"
 
@@ -287,8 +283,8 @@ msgid ""
 "example, to remount the <filename>/home</filename> file system, the command "
 "is <command>mount -o remount /home</command>."
 msgstr ""
-"<command>mount -o remount <replaceable>檔案系統</replaceable></command> 指令會將 "
-"named 檔案系統重新掛載。比方說，若要重新掛載 <filename>/home</filename> 檔案系統的話，該指令就會是 "
+"<command>mount -o remount <replaceable>file-system</replaceable></command> "
+"指令會將 file-system 檔案系統重新掛載。比方說，若要重新掛載 <filename>/home</filename> 檔案系統的話，指令為 "
 "<command>mount -o remount /home</command>。"
 
 #. Tag: para
@@ -301,7 +297,7 @@ msgid ""
 "result as follows: <command><replaceable>package-version-"
 "release</replaceable></command>."
 msgstr ""
-"使用 <command>rpm -q <replaceable>套件</replaceable></command> "
+"使用 <command>rpm -q <replaceable>package</replaceable></command> "
 "指令來查看目前已安裝套件的版本。系統將會回傳此結果：<command><replaceable>package-version-"
 "release</replaceable></command>。"
 
@@ -313,7 +309,7 @@ msgid ""
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
 "請注意上方的重體兼斜體字 — username、domain.name、file-system、package、version、以及 "
-"release。這些字都是可以取代的，一是您下指令時所打的文字，二是系統所顯示的文字。"
+"release。這些字都是可以取代的：不是您下指令時所打的文字，就是系統所顯示的文字。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -322,21 +318,21 @@ msgstr ""
 msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
-msgstr "除了用來顯示一項作業標題這樣的標準用法，斜體字也可代表第一次使用的重要新詞彙。比方說："
+msgstr "除了用來顯示工作標題這樣的標準用法，斜體字也可代表第一次出現的重要新詞彙。比方說："
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr "Publican 是個 <firstterm>DocBook</firstterm> 發佈系統。"
+msgstr "Publican 是一種 <firstterm>DocBook</firstterm> 發佈系統。"
 
 #. Tag: title
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "引述常規"
+msgstr "引述規範"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -345,7 +341,7 @@ msgstr "引述常規"
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr "終端機輸出與原始碼資料會被設為在附近的文字間不會被看見。"
+msgstr "終端機輸出與原始碼資料會列在文字框裡面。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -355,7 +351,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced "
 "roman</computeroutput> and presented thus:"
 msgstr ""
-"傳送至終端機的輸出設置為 <computeroutput>mono-spaced roman</computeroutput>，並且以此方式顯示："
+"傳送至終端機的輸出設置為 <computeroutput>mono-spaced roman</computeroutput>（固定寬度 roman "
+"字型），並且以此方式顯示："
 
 #. Tag: screen
 #, no-c-format
@@ -374,14 +371,15 @@ msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced "
 "roman</computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"原始碼排列亦設置為 <computeroutput>mono-spaced roman</computeroutput> 不過會如下加上語法強調："
+"原始碼排列亦設置為 <computeroutput>mono-spaced roman</computeroutput>（固定寬度 roman "
+"字型），並以彩色強調語法："
 
 #. Tag: title
 # translation auto-copied from project Publican Common, version 3, document
 # Conventions
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr "註解和警告"
+msgstr "注意和警告"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -400,7 +398,8 @@ msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out"
 " on a trick that makes your life easier."
-msgstr "註解代表某些作業上的提示、捷徑或是其它完成方式。忽略註解並不會帶來太大的負面影響，不過您可能會忽略掉某些能夠較輕鬆完成工作的方式。"
+msgstr ""
+"「注意」代表某些作業上的提示、捷徑或是其它完成工作的方式。忽略「注意」並不會帶來太大的負面影響，不過您可能會忽略掉某些能夠較輕鬆完成工作的方式。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -412,8 +411,7 @@ msgid ""
 "before an update will apply. Ignoring a box labeled 'Important' will not "
 "cause data loss but may cause irritation and frustration."
 msgstr ""
-"重點方塊會將容易遺漏掉的項目詳細列出：只對應於當下 session "
-"的配置變更，或是某些要套用更新前必須將之重新啟用的服務。倘若您忽略掉重點方塊，雖然不會造成資料遺失，不過卻會造成工作上的不便與其它影響。"
+"「重要」方塊會將容易遺漏掉的項目詳細列出：例如變更配置只會套用到目前的作業階段，或是要套用更新則必須重新啟動服務等等。倘若您忽略掉重點方塊，雖然不會造成資料遺失，不過卻會造成工作上的不便與其它影響。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -422,4 +420,4 @@ msgstr ""
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr "任何警告都不該被忽略掉。忽略警告則很有可能會造成資料上的遺失。"
+msgstr "讀者不該忽略任何「警告」。忽略「警告」很有可能會造成資料遺失。"
