--- a/publican/datadir/Common_Content/common/es-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/es-ES/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to Spanish
 # Manuel Ospina <mospina@redhat.com>, 2007, 2009.
 # Gladys Guerrero Lozano <gguerrer@redhat.com>, 2008.
+# gguerrer <gguerrer@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: publican.common_content.Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2010-10-01 05:39-0400\n"
+"PO-Revision-Date: 2012-08-30 12:26-0400\n"
 "Last-Translator: Héctor Daniel Cabrera <logan@fedoraproject.org>\n"
 "Language-Team: Fedora Spanish <trans-es@lists.fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
@@ -60,7 +61,7 @@ msgstr ""
 # Conventions
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr "Convenciones Tipográficas"
+msgstr "Convenciones tipográficas"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -88,6 +89,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"Utilizado para resaltar la entrada del sistema, incluyendo los comandos de "
+"shell, nombres de archivos y rutas. También sirve para resaltar teclas y "
+"combinaciones de teclas. Por ejemplo:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -112,6 +116,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"El ejemplo anterior incluye un nombre de archivo, un comando de shell y una "
+"tecla . Todo se presenta en negrita-monoespaciado y distinguible gracias al "
+"contexto."
 
 #. Tag: para
 #, no-c-format
@@ -119,6 +126,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"Las combinaciones de teclas se pueden distinguir de las individuales con el "
+"signo más que conecta cada partee de la combinación de tecla. Por ejemplo:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -134,6 +143,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"Pulse "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" para pasar a una terminal  virtual."
 
 #. Tag: para
 #, no-c-format
@@ -141,6 +153,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"El primer ejemplo resalta una tecla particular a pulsar. El segundo ejemplo,"
+" resalta una combinación de teclas: un set de tres teclas pulsadas "
+"simultáneamente."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -190,7 +205,7 @@ msgstr ""
 "Esta denota palabras o frases encontradas en un sistema, incluyendo nombres "
 "de aplicación, texto de cuadro de diálogo, botones etiquetados, etiquetas de"
 " cajilla de verificación y botón de radio; títulos de menú y títulos del "
-"sub-menú. Por ejemplo:"
+"submenú. Por ejemplo:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -232,6 +247,21 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"Para insertar un carácter especial en un archivo "
+"<application>gedit</application>, seleccione "
+"<menuchoice><guimenu>Aplicaciones</guimenu><guisubmenu>Accesorios</guisubmenu><guimenuitem>Mapa"
+" de caracteres</guimenuitem></menuchoice> de la barra del menú. Luego, "
+"seleccione "
+"<menuchoice><guimenu>Búsqueda</guimenu><guimenuitem>Buscar…</guimenuitem></menuchoice>"
+" de la  barra del menú  de <application>Mapa de caracteres</application>, "
+"escriba el nombre del carácter en el campo de <guilabel>Búsqueda</guilabel> "
+"y haga clic en  <guibutton>Siguiente</guibutton>. El carácter que buscó será"
+" resaltado en la <guilabel>Tabla de caracteres</guilabel>. Haga doble clic "
+"en ese carácter resaltado para colocarlo en  el campo  de <guilabel>Texto a "
+"copiar</guilabel> y luego haga clic en el botón  "
+"<guibutton>Copiar</guibutton>. Ahora regrese al documento y elija  "
+"<menuchoice><guimenu>Modificar</guimenu><guimenuitem>Pegar</guimenuitem></menuchoice>"
+" de la barra de menú de <application>gedit</application>."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -288,8 +318,9 @@ msgid ""
 "type <command>ssh john@example.com</command>."
 msgstr ""
 "Para conectar a una máquina remota utilizando ssh, teclee <command>ssh "
-"<replaceable>nombredeusuario</replaceable>@<replaceable>dominio.nombre</replaceable></command>"
-" en un intérprete de comandos de shell. Si la máquina remota es "
+"<replaceable>nombre de "
+"usuario</replaceable>@<replaceable>dominio.nombre</replaceable></command> en"
+" un intérprete de comandos de shell. Si la máquina remota es "
 "<filename>example.com</filename> y su nombre de usuario en esa máquina es "
 "john, teclee <command>ssh john@example.com</command>."
 
@@ -331,6 +362,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"Observe que las palabras resaltadas en itálicas  — nombre de usuario, "
+"dominio.nombre, sistema de archivo, paquete, versión y lanzamiento. Cada "
+"palabra es un  marcador de posición, ya sea de texto a ingresar cuando se "
+"ejecuta un comando o para un texto ejecutado por el sistema."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
