--- a/publican/datadir/Common_Content/common/ja-JP/Conventions.po
+++ b/publican/datadir/Common_Content/common/ja-JP/Conventions.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Conventions-1\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2012-08-29 09:03-0400\n"
+"PO-Revision-Date: 2012-08-30 12:35-0400\n"
 "Last-Translator: ykatabam <ykatabam@fedoraproject.org>\n"
 "Language-Team: Japanese <fedora-trans-ja@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -85,6 +85,7 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"シェルコマンド、ファイル名、パスなど、システムへの入力を強調するために使用します。また、キー名やキーの組み合わせを強調するのにも使用します。以下が例となります。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -107,13 +108,14 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"上記の例には、ファイル名、シェルコマンド、キー名が含まれており、すべて太字の等幅フォントで表示されていますが、文脈で区別することができます。"
 
 #. Tag: para
 #, no-c-format
 msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
-msgstr ""
+msgstr "キーの組み合わせは、プラス記号 (+) で各キーがつながれているので、個別のキーと区別することができます。以下が例となります。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -137,7 +139,7 @@ msgstr ""
 msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
-msgstr ""
+msgstr "第 1 の例では、押すべき特定のキー名が強調されています。第 2 の例では、3 つのキーを同時に押す、キーの組み合わせが強調されています。"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
