--- a/publican/datadir/Common_Content/common/ml-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ml-IN/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to
 # Ani Peter <apeter@redhat.com>, 2007.
+# anipeter <anipeter@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 06:44-0500\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2012-08-30 03:32-0400\n"
+"Last-Translator: anipeter <anipeter@fedoraproject.org>\n"
 "Language-Team: <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -88,6 +89,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"ഷെല്‍ കമാന്‍ഡുകള്‍, ഫയല്‍ നാമങ്ങള്‍, പാഥുകള്‍ എന്നിവ ഉള്‍പ്പടെയുള്ള സിസ്റ്റം"
+" ഇന്‍പുട്ട് എടുത്തു് കാണിയ്ക്കുന്നതിനായി ഉപയോഗിയ്ക്കുന്നു. കീകളും "
+"കീകൂട്ടങ്ങള്‍ക്കായും ഇതു് ഉപയോഗിയ്ക്കുന്നു. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -111,6 +115,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"മുകളില്‍ പറഞ്ഞിരിയ്ക്കുന്നതില്‍, ഒരു ഷെല്‍ കമാന്‍ഡ്, ഒരു കീ, എന്നിവ "
+"ഉള്‍പ്പെടുന്നു."
 
 #. Tag: para
 #, no-c-format
@@ -118,6 +124,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"ഓരോ കീകൂട്ടങ്ങളേയും തിരിച്ചറിയുവാന്‍ അവ തമ്മില്‍ യോജിപ്പിയ്ക്കുന്ന + ചിഹ്നം "
+"ഉപയോഗിയ്ക്കാം. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -133,6 +141,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"ഒരു വിര്‍ച്ച്വല്‍ ടെര്‍മിനലിലേക്കു് മാറ്റുന്നതിനായി  "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" അമര്‍ത്തുക."
 
 #. Tag: para
 #, no-c-format
@@ -140,6 +151,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"ആദ്യത്തെ ഉദാഹരണം ഉപയോഗിയ്ക്കുന്ന ഒരു പ്രത്യേക കീ എടുത്തു കാണിയ്ക്കുന്നു. "
+"രണ്ടാമത്തെ ഉദാഹരണത്തില്‍ ഒരു കീ കൂട്ടം കാണിച്ചിരിയ്ക്കുന്നു: ഒരുമിച്ചു് "
+"മൂന്നു് കീകള്‍ അമര്‍ത്തിയിരിയ്ക്കുന്നു."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -231,6 +245,22 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"ബാറില്‍ നിന്നും "
+"<menuchoice><guimenu>പ്രയോഗങ്ങള്‍</guimenu><guisubmenu>ഉപകരണങ്ങള്‍</guisubmenu><guimenuitem>ക്യാരക്ടര്‍"
+" മാപ്പ്</guimenuitem></menuchoice> തെരഞ്ഞെടുക്കുക. അടുത്തതു്, "
+"<application>ക്യാരക്ടര്‍ മാപ്പ്</application> മെനു ബാറില്‍ നിന്നും "
+"<menuchoice><guimenu>തെരയുക</guimenu><guimenuitem>കണ്ടുപിടിയ്ക്കുക…</guimenuitem></menuchoice>"
+" തെരഞ്ഞെടുത്തു്, <guilabel>തെരയുക</guilabel> ഫീള്‍ഡില്‍ തെരയുന്നതിനുള്ള "
+"അക്ഷരത്തിന്റെ പേരു് ടൈപ്പ് ചെയ്തു് <guibutton>അടുത്തതു്</guibutton> എന്ന "
+"ബട്ടണ്‍ ക്ലിക്ക് ചെയ്യുക. നിങ്ങള്‍ തെരയുന്ന അക്ഷരം <guilabel>ക്യാരക്ടര്‍ "
+"ടേബിള്‍</guilabel> എടുത്തു് കാണിയ്ക്കുന്നു. <guilabel>പകര്‍ത്തുന്നതിനുള്ള "
+"വാചകം</guilabel> ഫീള്‍ഡില്‍ ഇതിനെ സ്ഥാപിയ്ക്കുന്നതിനായി ഈ തെരഞ്ഞെടുത്ത "
+"അക്ഷരത്തില്‍ രണ്ടും തവണ ക്ലിക്ക് ചെയ്യുക, ശേഷം  "
+"<guibutton>പകര്‍ത്തുക</guibutton> ബട്ടണ്‍ ക്ലിക്ക് ചെയ്യുക. ഇനി, തിരികെ "
+"നിങ്ങളുടെ രേഖയിലേക്കു് വന്നു്,  <application>gedit</application> മെനു "
+"ബാറില്‍ നിന്നും "
+"<menuchoice><guimenu>ചിട്ടപ്പെടുത്തുക</guimenu><guimenuitem>ഒട്ടിയ്ക്കുക</guimenuitem></menuchoice>"
+" തെരഞ്ഞെടുക്കുക."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -333,6 +363,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"മുകളില്‍ കട്ടിയുള്ള ശൈലിയില്‍ പറഞ്ഞിരിയ്ക്കുന്ന വാക്കുകള്‍ ശ്രദ്ധിയ്ക്കുക — "
+"username, domain.name, file-system, package, version and release. ഈ ഓരോ "
+"വാക്കും സ്ഥാനമുള്ളതാകുന്നു - കമാന്‍ഡ് നല്‍കുമ്പോള്‍ നിങ്ങള്‍ നല്‍കുന്ന "
+"വാചകം, അല്ലെങ്കില്‍ സിസ്റ്റം ലഭ്യമാക്കുന്ന സിസ്റ്റം."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -389,6 +423,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
