--- a/publican/datadir/Common_Content/common/ml-IN/Revision_History.po
+++ b/publican/datadir/Common_Content/common/ml-IN/Revision_History.po
@@ -1,10 +1,11 @@
 # AUTHOR <EMAIL@ADDRESS>, YEAR.
+# anipeter <anipeter@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
 "POT-Creation-Date: 2012-07-28T22:20:05\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2012-08-30 03:00-0400\n"
+"Last-Translator: anipeter <anipeter@fedoraproject.org>\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,14 +24,14 @@ msgstr "റിവിഷന്‍ ഹിസ്റ്ററി"
 #. Tag: firstname
 #, no-c-format
 msgid "Jeff"
-msgstr ""
+msgstr "ജെഫ്"
 
 #. Tag: surname
 #, no-c-format
 msgid "Fearn"
-msgstr ""
+msgstr "ഫേണ്‍"
 
 #. Tag: member
 #, no-c-format
 msgid "Publican 3.0"
-msgstr ""
+msgstr "പബ്ലിക്കന്‍ 3.0"
