--- a/publican/datadir/Common_Content/common/mr-IN/Revision_History.po
+++ b/publican/datadir/Common_Content/common/mr-IN/Revision_History.po
@@ -1,10 +1,11 @@
 # AUTHOR <EMAIL@ADDRESS>, YEAR.
+# sandeeps <sandeeps@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
 "POT-Creation-Date: 2012-07-28T22:20:05\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2012-08-30 03:52-0400\n"
+"Last-Translator: sandeeps <sandeeps@fedoraproject.org>\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,19 +19,19 @@ msgstr ""
 # Revision_History
 #, no-c-format
 msgid "Revision History"
-msgstr "उजळणी इतिहास"
+msgstr "आवृत्ती इतिहास"
 
 #. Tag: firstname
 #, no-c-format
 msgid "Jeff"
-msgstr ""
+msgstr "जेफ्"
 
 #. Tag: surname
 #, no-c-format
 msgid "Fearn"
-msgstr ""
+msgstr "फर्न्"
 
 #. Tag: member
 #, no-c-format
 msgid "Publican 3.0"
-msgstr ""
+msgstr "Publican 3.0"
